buttons not jumping around on page because I removed the button border. However it doesn't look like how I want it now.  Next step: work on fixing button border issue.

--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     background: rgb(6,0,102);
     background: linear-gradient(0deg, rgba(6,0,102,1) 0%, rgba(58,58,227,1) 5%, rgba(209,209,209,1) 100%);
@@ -29,7 +33,6 @@ button {
 
 button:hover {
     background-color: dimgray;
-    border: solid black;
     color: black;
     border-radius: 5%;
     box-shadow: 0px 0px 20px 10px inset;
